# RCP_with_job-independent_processing_times

./: .gitignore  CMakeLists.txt  README.md  run_on_dataset.sh  sample_instance.txt
dataset/: M_04_J_04_r_1.0_00.txt  M_04_J_04_r_1.0_01.txt  M_04_J_04_r_1.0_02.txt  M_04_J_04_r_1.0_03.txt  M_04_J_04_r_1.0_04.txt  M_04_J_04_r_2.0_00.txt  M_04_J_04_r_2.0_01.txt  M_04_J_04_r_2.0_02.txt  M_04_J_04_r_2.0_03.txt  M_04_J_04_r_2.0_04.txt  M_04_J_04_r_3.0_00.txt  M_04_J_04_r_3.0_01.txt  M_04_J_04_r_3.0_02.txt  M_04_J_04_r_3.0_03.txt  M_04_J_04_r_3.0_04.txt  M_04_J_04_r_4.0_00.txt  M_04_J_04_r_4.0_01.txt  M_04_J_04_r_4.0_02.txt  M_04_J_04_r_4.0_03.txt  M_04_J_04_r_4.0_04.txt  M_04_J_05_r_1.0_00.txt  M_04_J_05_r_1.0_01.txt  M_04_J_05_r_1.0_02.txt  M_04_J_05_r_1.0_03.txt  M_04_J_05_r_1.0_04.txt  M_04_J_05_r_2.0_00.txt  M_04_J_05_r_2.0_01.txt  M_04_J_05_r_2.0_02.txt  M_04_J_05_r_2.0_03.txt  M_04_J_05_r_2.0_04.txt  M_04_J_05_r_3.0_00.txt  M_04_J_05_r_3.0_01.txt  M_04_J_05_r_3.0_02.txt  M_04_J_05_r_3.0_03.txt  M_04_J_05_r_3.0_04.txt  M_04_J_05_r_4.0_00.txt  M_04_J_05_r_4.0_01.txt  M_04_J_05_r_4.0_02.txt  M_04_J_05_r_4.0_03.txt  M_04_J_05_r_4.0_04.txt  (+4640 more)
include/: Bitset.h  Globals.h  IDs.h  Instance.h  Pool.h  Solver.h  State.h
src/: Instance.cpp  Pool.cpp  Solver.cpp  State.cpp  main.cpp
